--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -39,14 +39,14 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/pedidos.html">
                             <i><img src="https://img.icons8.com/ios-glyphs/40/null/shopping-cart--v1.png" /></i>
                             <span class="text nav-text">Pedidos</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="clientes.html">
+                        <a href="../dashboard/clientes.html">
                             <i><img src="https://img.icons8.com/sf-black-filled/48/null/conference-call.png" /></i>
                             <span class="text nav-text">Clientes</span>
                         </a>
@@ -60,7 +60,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="../dashboard/usuario.html">
+                        <a href="../dashboard/usuarios.html">
                             <i><img src="https://img.icons8.com/fluency-systems-filled/48/null/user.png" /></i>
                             <span class="text nav-text">Usuarios</span>
                         </a>
