--- a/views/dashboard/usuarios.html
+++ b/views/dashboard/usuarios.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="../dashboard/usuario.html">
+                        <a href="../dashboard/usuarios.html">
                             <i><img src="https://img.icons8.com/fluency-systems-filled/48/null/user.png" /></i>
                             <span class="text nav-text">Usuarios</span>
                         </a>
