--- a/views/dashboard/usuarios.html
+++ b/views/dashboard/usuarios.html
@@ -133,7 +133,7 @@
                                 <td>alejandro@gmail.com</td>
                                 <td>Alejo321</td>
                                 <td>Activo</td>
-                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="openCreate3()"/><img src="../../resources/images/iconos/editar.png"></td>
+                                <td><img src="https://img.icons8.com/ios-filled/40/null/minus.png" onclick="openCreate3()"/><img src="../../resources/images/iconos/editar.png" onclick="editarusuario()"></td>
                             </tr>
                         </tbody>
                     </table>                                
