--- a/views/dashboard/usuarios.html
+++ b/views/dashboard/usuarios.html
@@ -21,7 +21,7 @@
             </div>
             <i class='bx bx-chevron-right toggle'></i>
         </header>
-
+        <!--Enlaces dashboard-->
         <div class="menu-bar">
             <div class="menu">
                 <ul class="menu-links">
@@ -31,30 +31,35 @@
                             <span class="text nav-text">Dashboard</span>
                         </a>
                     </li>
+                    <!--Enlace a la página de pedidos-->
                     <li class="nav-link">
                         <a href="../dashboard/pedidos.html">
                             <i><img src="https://img.icons8.com/ios-glyphs/40/null/shopping-cart--v1.png" /></i>
                             <span class="text nav-text">Pedidos</span>
                         </a>
                     </li>
+                    <!--Enlace a la página de clientes-->
                     <li class="nav-link">
                         <a href="../dashboard/clientes.html">
                             <i><img src="https://img.icons8.com/sf-black-filled/48/null/conference-call.png" /></i>
                             <span class="text nav-text">Clientes</span>
                         </a>
                     </li>
+                    <!--Enlace a la página de productos-->
                     <li class="nav-link">
                         <a href="#">
                             <i><img src="https://img.icons8.com/material-sharp/42/null/package.png" /></i>
                             <span class="text nav-text">Productos</span>
                         </a>
                     </li>
+                    <!--Enlace a la página de usuarios-->
                     <li class="nav-link">
                         <a href="../dashboard/usuarios.html">
                             <i><img src="https://img.icons8.com/fluency-systems-filled/48/null/user.png" /></i>
                             <span class="text nav-text">Usuarios</span>
                         </a>
                     </li>
+                    <!--Enlace a la página de categorias-->
                     <li class="nav-link">
                         <a href="#">
                             <i><img
@@ -65,6 +70,7 @@
                 </ul>
             </div>
             <div class="bottom-content">
+                <!--Logout/cierre de sesión-->
                 <li class="">
                     <a href="#">
                         <i><img
@@ -72,6 +78,7 @@
                         <span class="text nav-text">Logout</span>
                     </a>
                 </li>
+                <!--Boton de modo oscuro-->
                 <li class="mode">
                     <div class="sun-moon">
                         <i class='bx bx-moon icon moon'></i>
