--- a/views/dashboard/usuarios.html
+++ b/views/dashboard/usuarios.html
@@ -47,7 +47,7 @@
                     </li>
                     <!--Enlace a la página de productos-->
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/productos.html">
                             <i><img src="https://img.icons8.com/material-sharp/42/null/package.png" /></i>
                             <span class="text nav-text">Productos</span>
                         </a>
