--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -5,6 +5,7 @@
     --text: #ffffff;
     --dark-blue: #061e46;
     --bg-primary: #be4a7f;
+    --bg-secondary: #2d2e2f;
 }
 
 .bg-dark{
@@ -13,6 +14,12 @@
 
 .bg-primary{
     background-color: var(--bg-primary) !important;
+}
+
+.bg-secondary{
+    background-color: var(--bg-secondary) !important;
+    border-color: var(--bg-secondary) !important;
+    color: var(--text) !important;
 }
 
 *{
@@ -177,6 +184,11 @@ a{
     position: absolute;
     transition: none;
     transform: translateX(400px);
+}
+
+.wrapper.active .form-box.registrate{
+    transition: transform .18s ease;
+    transform: translateX(0);
 }
 
 .wrapper.active .form-box.registrate{
