--- a/views/public/cuenta.html
+++ b/views/public/cuenta.html
@@ -56,59 +56,69 @@
     </div>
     <!-- formulario nueva cuenta -->
     <div class="container my-3">
-        <form class="row g-3 needs-validation" novalidate>
-            <div class="col-md-4">
-                <label for="validationCustom01" class="form-label text-light">Nombres</label>
-                <input type="text" class="form-control" id="validationCustom01" value="" required>
-                <div class="valid-feedback">
-                    Looks good!
+        <form action="/soli" method="POST" autocomplete="off">
+            <div class="row">
+                <div class="col-7">
+                    <div class="row py-2">
+                        <div class="col-4">
+                            <label for="exampleFormControlInput1" class="form-label text-light">Nombres</label>
+                            <input type="email" class="form-control bg-secondary" id="exampleFormControlInput1"
+                                placeholder="">
+                        </div>
+                        <div class="col-4">
+                            <label for="exampleFormControlInput1" class="form-label text-light">Apellidos</label>
+                            <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                                placeholder="">
+                        </div>
+                        <div class="col-4">
+                            <label for="exampleFormControlInput1" class="form-label text-light">Usuario</label>
+                            <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                                placeholder="">
+                        </div>
+                    </div>
+                    <div class="row py-2">
+                        <div class="col-4">
+                            <label for="exampleFormControlInput1" class="form-label text-light">Correo</label>
+                            <input type="email" class="form-control bg-secondary" id="exampleFormControlInput1"
+                                placeholder="">
+                        </div>
+                        <div class="col-4">
+                            <label for="exampleFormControlInput1" class="form-label text-light">Telefono</label>
+                            <input type="text" class="form-control bg-secondary" id="exampleFormControlInput1"
+                                placeholder="">
+                        </div>
+                        <div class="col-4">
+                            <label for="exampleFormControlInput1" class="form-label text-light">Clave</label>
+                            <input type="password" class="form-control bg-secondary" id="exampleFormControlInput1"
+                                placeholder="">
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <label for="validationCustom02" class="form-label text-light">Apellidos</label>
-                <input type="text" class="form-control" id="validationCustom02" value="" required>
-                <div class="valid-feedback">
-                    Looks good!
-                </div>
-            </div>
-            <div class="col-md-4">
-                <label for="validationCustomUsername" class="form-label text-light">Usuario</label>
-                <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                    <input type="text" class="form-control" id="validationCustomUsername"
-                        aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Please choose a username.
+                <div class="col-5 pt-3">
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label text-light">Direccion</label>
+                        <textarea class="form-control bg-secondary" id="exampleFormControlTextarea1"
+                            rows="4"></textarea>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <label for="validationCustom03" class="form-label text-light">Correo</label>
-                <input type="text" class="form-control" id="validationCustom03" required>
-                <div class="invalid-feedback">
-                    Please provide a valid email.
-                </div>
-            </div>
-            <div class="col-md-4">
-                <label for="validationCustom03" class="form-label text-light">Dui</label>
-                <input type="text" class="form-control" id="validationCustom03" required>
-                <div class="invalid-feedback">
-                    Please provide a valid email.
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                    <label class="form-check-label text-light" for="invalidCheck text-light">
-                        Acepta los terminos y condiciones
-                    </label>
-                    <div class="invalid-feedback">
-                        You must agree before submitting.
+            <div class="row py-3">
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label text-light" for="invalidCheck text-light">
+                            Acepta los terminos y condiciones
+                        </label>
+                        <div class="invalid-feedback">
+                            You must agree before submitting.
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-2">
-                <button class="btn btn-primary" type="submit">Aceptar</button>
+            <div class="row py-3">
+                <div class="col-2">
+                    <button class="btn btn-primary" type="submit">Aceptar</button>
+                </div>
             </div>
         </form>
     </div>
