--- a/views/dashboard/clientes.html
+++ b/views/dashboard/clientes.html
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="../dashboard/productos.html">
                             <i><img src="https://img.icons8.com/material-sharp/42/null/package.png" /></i>
                             <span class="text nav-text">Productos</span>
                         </a>
