--- a/resources/css/dashbard.css
+++ b/resources/css/dashbard.css
@@ -1,14 +1,13 @@
 /* Google Font Import - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-:root {
+:root{
     /* ===== Colors ===== */
     --body-color: #f9fafc;
     --sidebar-color: #6384aa;
@@ -24,18 +23,18 @@
     --tran-05: all 0.3s ease;
 }
 
-body {
+body{
     min-height: 100vh;
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
 
-::selection {
+::selection{
     background-color: var(--primary-color);
     color: #fff;
 }
 
-body.dark {
+body.dark{
     --body-color: #18191a;
     --sidebar-color: #242526;
     --primary-color: #3a3b3c;
@@ -45,7 +44,7 @@ body.dark {
 }
 
 /* ===== Sidebar ===== */
-.sidebar {
+ .sidebar{
     position: fixed;
     top: 0;
     left: 0;
@@ -54,16 +53,15 @@ body.dark {
     padding: 10px 14px;
     background: var(--sidebar-color);
     transition: var(--tran-05);
-    z-index: 100;
-    text-align: center;
+    z-index: 100; 
+    text-align: center; 
 }
-
-.sidebar.close {
+.sidebar.close{
     width: 88px;
 }
 
 /* ===== Reusable code - Here ===== */
-.sidebar li {
+.sidebar li{
     height: 50px;
     list-style: none;
     display: flex;
@@ -72,12 +70,12 @@ body.dark {
 }
 
 .sidebar header .image,
-.sidebar .icon {
+.sidebar .icon{
     min-width: 60px;
     border-radius: 6px;
 }
 
-.sidebar .icon {
+.sidebar .icon{
     min-width: 60px;
     border-radius: 6px;
     height: 100%;
@@ -88,62 +86,58 @@ body.dark {
 }
 
 .sidebar .text,
-.sidebar .icon {
+.sidebar .icon{
     color: var(--text-color);
     transition: var(--tran-03);
 }
 
-.sidebar .text {
+.sidebar .text{
     font-size: 17px;
     font-weight: 500;
     white-space: nowrap;
     opacity: 1;
 }
-
-.sidebar.close .text {
+.sidebar.close .text{
     opacity: 0;
 }
-
 /* =========================== */
 
-.sidebar header {
+.sidebar header{
     position: relative;
 }
 
-.sidebar header .image-text {
+.sidebar header .image-text{
     display: flex;
     align-items: center;
 }
-
-.sidebar header .logo-text {
+.sidebar header .logo-text{
     display: flex;
     flex-direction: column;
 }
-
 header .image-text .name {
     margin-top: 2px;
     font-size: 18px;
     font-weight: 600;
 }
 
-header .image-text .profession {
+header .image-text .profession{
     font-size: 16px;
     margin-top: -2px;
     display: block;
 }
 
-.sidebar header .image {
+.sidebar header .image{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.sidebar header .image img {
+.sidebar header .image img{
     width: 40px;
     border-radius: 6px;
 }
 
-.sidebar header .toggle {
+.sidebar header .toggle{
     position: absolute;
     top: 50%;
     right: -25px;
@@ -161,26 +155,26 @@ header .image-text .profession {
     transition: var(--tran-05);
 }
 
-body.dark .sidebar header .toggle {
+body.dark .sidebar header .toggle{
     color: var(--text-color);
 }
 
-.sidebar.close .toggle {
+.sidebar.close .toggle{
     transform: translateY(-50%) rotate(0deg);
 }
 
-.sidebar .menu {
+.sidebar .menu{
     margin-top: 40px;
 }
 
-.sidebar li.search-box {
+.sidebar li.search-box{
     border-radius: 6px;
     background-color: var(--primary-color-light);
     cursor: pointer;
     transition: var(--tran-05);
 }
 
-.sidebar li.search-box input {
+.sidebar li.search-box input{
     height: 100%;
     width: 100%;
     outline: none;
@@ -192,8 +186,7 @@ body.dark .sidebar header .toggle {
     font-weight: 500;
     transition: var(--tran-05);
 }
-
-.sidebar li a {
+.sidebar li a{
     list-style: none;
     height: 100%;
     background-color: transparent;
@@ -206,61 +199,54 @@ body.dark .sidebar header .toggle {
     transition: var(--tran-03);
 }
 
-.sidebar li a:hover {
+.sidebar li a:hover{
     background-color: var(--primary-color);
 }
-
 .sidebar li a:hover .icon,
-.sidebar li a:hover .text {
+.sidebar li a:hover .text{
     color: var(--sidebar-color);
 }
-
 body.dark .sidebar li a:hover .icon,
-body.dark .sidebar li a:hover .text {
+body.dark .sidebar li a:hover .text{
     color: var(--text-color);
 }
 
-.sidebar .menu-bar {
+.sidebar .menu-bar{
     height: calc(100% - 55px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow-y: scroll;
 }
-
-.menu-bar::-webkit-scrollbar {
+.menu-bar::-webkit-scrollbar{
     display: none;
 }
-
-.sidebar .menu-bar .mode {
+.sidebar .menu-bar .mode{
     border-radius: 6px;
     background-color: var(--primary-color-light);
     position: relative;
     transition: var(--tran-05);
 }
 
-.menu-bar .mode .sun-moon {
+.menu-bar .mode .sun-moon{
     height: 50px;
     width: 60px;
 }
 
-.mode .sun-moon i {
+.mode .sun-moon i{
     position: absolute;
 }
-
-.mode .sun-moon i.sun {
+.mode .sun-moon i.sun{
     opacity: 0;
 }
-
-body.dark .mode .sun-moon i.sun {
+body.dark .mode .sun-moon i.sun{
     opacity: 1;
 }
-
-body.dark .mode .sun-moon i.moon {
+body.dark .mode .sun-moon i.moon{
     opacity: 0;
 }
 
-.menu-bar .bottom-content .toggle-switch {
+.menu-bar .bottom-content .toggle-switch{
     position: absolute;
     right: 0;
     height: 100%;
@@ -271,8 +257,7 @@ body.dark .mode .sun-moon i.moon {
     border-radius: 6px;
     cursor: pointer;
 }
-
-.toggle-switch .switch {
+.toggle-switch .switch{
     position: relative;
     height: 22px;
     width: 40px;
@@ -281,7 +266,7 @@ body.dark .mode .sun-moon i.moon {
     transition: var(--tran-05);
 }
 
-.switch::before {
+.switch::before{
     content: '';
     position: absolute;
     height: 15px;
@@ -294,11 +279,11 @@ body.dark .mode .sun-moon i.moon {
     transition: var(--tran-04);
 }
 
-body.dark .switch::before {
+body.dark .switch::before{
     left: 20px;
 }
 
-.home {
+.home{
     position: absolute;
     top: 0;
     top: 0;
@@ -308,40 +293,37 @@ body.dark .switch::before {
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
-
-.home .text {
+.home .text{
     font-size: 30px;
     font-weight: 500;
     color: var(--text-color);
     padding: 12px 60px;
 }
 
-.sidebar.close~.home {
+.sidebar.close ~ .home{
     left: 78px;
     height: 100vh;
     width: calc(100% - 78px);
 }
-
-body.dark .home .text {
+body.dark .home .text{
     color: var(--text-color);
 }
 
-.chart-container {
+.chart-container{
     height: 40vh;
     width: 80vh;
 }
 
-.chart-container2 {
-    height: 30vh;
+.chart-container2{
+    height: 40vh;
     width: 60vh;
 }
 
-ol,
-ul {
+ol, ul {
     padding-left: 0 !important;
 }
 
-#tabla {
+#tabla{
     border: solid 1px;
     border-radius: 5px;
     background-color: #788199;
