--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -559,3 +559,17 @@ canvas .active {
     transform-origin: center center;
     transition: transform 0.6s ease;
   }
+
+  .user-menu{
+    background-color: transparent;
+    border: 0;
+  }
+
+  .user-menu:hover{
+    background-color: transparent;
+    border: 0;
+  }
+
+  .dropdown:hover .dropdown-menu{
+    display: block !important;
+  }
