--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -83,5 +83,114 @@
                 </div>
             </div>
         </div>
+        <div class="row my-3">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">Producto</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Categoria</th>
+                        <th scope="col">Stock</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Imagen</th>
+                        <th scope="col">Actualizar</th>
+                        <th scope="col">Eliminar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% products.forEach((data)=> { %>
+                        <tr>
+                            <td>
+                                <%= data.product %>
+                            </td>
+                            <td>
+                                <%= data.price %>
+                            </td>
+                            <td>
+                                <%= data.categorie %>
+                            </td>
+                            <td>
+                                <%= data.stock %>
+                            </td>
+                            <td>
+                                <%= data.status %>
+                            </td>
+                            <td>
+                                <button class="btn btn-primary"> <a href="/images/<%= data.image %>" class="text-dark">Ver imagen</a></button>
+                            </td>
+                            <td>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalUpdate<%= data._id %>">
+                                    Actualizar
+                                </button>
+                
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModalUpdate<%= data._id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" id="exampleModalLabel">Actualizar Producto</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <form action="/update/products/" method="post">
+                                                <div class="modal-body">
+                                                    <div class="row my-3">
+                                                        <div class="col-8 d-flex flex-row align-items-center">
+                                                            <label for="" class="form-label me-2">Producto: </label>
+                                                            <input type="text" class="form-control" name="product" id=""
+                                                                required value="<%= data.product %>">
+                                                        </div>
+                                                        <div class="col-4 d-flex flex-row align-items-center">
+                                                            <label for="" class="form-label me-2">Precio: </label>
+                                                            <input type="number" class="form-control" name="price" id=""
+                                                                required min="1" step="0.01" value="<%= data.price %>">
+                                                        </div>
+                                                    </div>
+                                                    <div class="row my-3">
+                                                        <div class="col-8 d-flex flex-row align-items-center">
+                                                            <label for="" class="form-label me-2">Categoria: </label>
+                                                            <select class="form-select" id="inputGroupSelect01"
+                                                            name="categorie" required>
+                                                                <option value="<%= data.categorie %>" selected><%= data.categorie %></option>
+                                                                <% categories.forEach((data)=> { %>
+                                                                    <% if(data.status == 'active') { %>
+                                                                        <option value="<%= data.categorie %>">
+                                                                            <%= data.categorie %>
+                                                                        </option>
+                                                                    <% } %>
+                                                                <% }) %>
+                                                            </select>
+                                                        </div>
+                                                        <div class="col-4 d-flex flex-row align-items-center">
+                                                            <label for="" class="form-label me-2">Stock: </label>
+                                                            <input type="number" class="form-control" name="stock" id=""
+                                                                required min="1" step="1" value="<%= data.stock %>">
+                                                        </div>
+                                                    </div>
+                                                    <div class="row my-3">
+                                                        <div class="col d-flex flex-row align-items-center">
+                                                            <label for="" class="form-label me-2">Imagen: </label>
+                                                            <input type="file" class="form-control" id="inputGroupFile01" name="image">
+                                                            <input type="text" value="<%= data._id %>" name="id" hidden>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                                    <button type="submit" class="btn btn-primary">Actualizar</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <button class="btn btn-danger"><a href="/delete/products/<%= data._id %>" class="text-light">Eliminar</a></button>
+                            </td>
+                        </tr>
+                </tbody>
+                <% }) %>
+            </table>
+        </div>
     </div>
 <% } %>
