--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -69,7 +69,7 @@
                 <div class="card-body">
                     <blockquote class="blockquote mb-0 d-flex align-items-center flex-column">
                         <img width="100" height="100" src="https://img.icons8.com/ios/100/comments--v1.png" alt="comments--v1"/>
-                        <button type="button" class="btn btn-warning mx-1 my-1 w-75"><a href="/usuarios" class="text-dark">Acceder</a></button>
+                        <button type="button" class="btn btn-warning mx-1 my-1 w-75"><a href="/comentarios" class="text-dark">Acceder</a></button>
                     </blockquote>
                 </div>
             </div>
